--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -13,3 +13,8 @@ repos:
     rev: v1.5.5
     hooks:
       - id: remove-crlf
+
+  - repo: https://github.com/pre-commit/mirrors-clang-format
+    rev: v18.1.8  # Use the sha / tag you want to point at
+    hooks:
+    - id: clang-format
