chore(ci): Update `CODEOWNERS`.
Signed-off-by: Guennadi Maximov C <g.maxc.fox@protonmail.com>

--- a/.github/CODEOWNERS
+++ b/.github/CODEOWNERS
@@ -2,5 +2,7 @@
 
 /src/log.c          @DrKJeff16
 /src/log.h          @DrKJeff16
+/src/operators.h    @DrKJeff16
+/src/types.h        @DrKJeff16
 /build.sh           @DrKJeff16 @vl01s
 /.github/CODEOWNERS @DrKJeff16
